# ai-pops

ai_pops/: QUICKSTART.md  README.md  SIMPLE_SETUP.md  install.py  pyproject.toml  run_server.py  setup_dev.py  start_server.py  test_api.py
ai_pops/src/ai_pops/: crew.py  main.py
ai_pops/src/ai_pops/api/: __init__.py  server.py
